kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-api
  labels:
    service: graphql
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graphql
  template:
    metadata:
      labels:
        service: graphql
        tier: api
    spec:
      containers:
      - name: graphql-api
        image: localhost:5000/mammals-graphql-api:1.0.0
        ports:
        - containerPort: 8077

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-mammals
  labels:
    service: query-mammals
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      service: query-mammals
  template:
    metadata:
      labels:
        service: query-mammals
        tier: backend
    spec:
      containers:
      - name: query-mammals
        image: localhost:5000/query-mammals-service:1.0.0
        ports:
        - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutate-mammals
  labels:
    service: mutate-mammals
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mutate-mammals
  template:
    metadata:
      labels:
        service: mutate-mammals
        tier: backend
    spec:
      containers:
      - name: mutate-mammals-validator
        image: localhost:5000/mutate-mammals-validator:1.0.0
        ports:
        - containerPort: 5001
      - name: mutate-mammals-service
        image: localhost:5000/mutate-mammals-service:1.0.0
        ports:
        - containerPort: 5000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mammals-mongo
  labels:
    service: mammals-mongo
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mammals-mongo
  template:
    metadata:
      labels:
        service: mammals-mongo
        tier: backend
    spec:
      containers:
      - name: mutate-mammals-validator
        image: localhost:5000/heinvde-mammals-mongo:1.0.0
        ports:
        - containerPort: 27017
